# Review_api

./: .gitignore  LICENSE  README.md  alembic.ini  api_description.py  bot.py  config.py  example.env  launch.py  main.py  pyproject.toml
aa/: aaa.py  ae.py
alembic/: env.py
alembic/versions/: 2024_02_20_1322-4f9154c84b86_create_users_table.py  2024_02_20_1430-9cd5c6dbf9e1_create_projects_table.py  2024_02_21_1237-7aee713a7761_create_reviews_table.py  2024_03_03_1225-ee451167e7c6_.py  2024_03_03_2034-3e1e72d79c8f_.py  2024_03_04_0710-ae17805f4c39_.py  2024_03_04_2015-8a49981f0bd7_.py  2024_03_05_1515-d23d68ea7009_.py  2024_03_07_1410-c245402c9e1f_add_column_rules_to_projects_table.py
api_bot/: bot.py  content.py  keyboards.py  status_responses.py  validator.py
api_v1/: __init__.py
api_v1/project/: crud.py  dependencies.py  find_user_info.py  link_validator.py  rules_for_review.py  schemas.py  validators.py  views.py
api_v1/review/: crud.py  dependencies.py  find_user_info.py  schemas.py  views.py
api_v1/user/: auth.py  crud.py  dependencies.py  schemas.py  views.py
botty/: bot.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  mixins.py  project.py  review.py  user.py
infra/: nginx.conf  review_api.service  review_bot.service
