[tool.poetry]
name = "api-for-review"
version = "0.1.0"
description = "api for reviewing projects"
authors = ["NickyBricky <buninkola16@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standart"], version = "^0.27.1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.27"}
aiosqlite = "^0.20.0"
alembic = "^1.13.1"
bcrypt = "^4.1.2"
fastapi = "^0.109.2"
pydantic = "^2.6.1"
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"
requests = "^2.31.0"
pytelegrambotapi = "^4.16.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
